--- a/css/style.css
+++ b/css/style.css
@@ -661,6 +661,17 @@
       -ms-flex-align: center;
           align-items: center;
 }
+.projects .projects__cards .projects__item-1 .item__box a,
+.projects .projects__cards .projects__item-2 .item__box a,
+.projects .projects__cards .projects__item-3 .item__box a,
+.projects .projects__cards .projects__item-4 .item__box a,
+.projects .projects__cards .projects__item-5 .item__box a,
+.projects .projects__cards .projects__item-6 .item__box a,
+.projects .projects__cards .projects__item-7 .item__box a,
+.projects .projects__cards .projects__item-8 .item__box a,
+.projects .projects__cards .projects__item-9 .item__box a {
+  text-decoration: none;
+}
 .projects .projects__cards .projects__item-1 .item__box .orange__button,
 .projects .projects__cards .projects__item-2 .item__box .orange__button,
 .projects .projects__cards .projects__item-3 .item__box .orange__button,
@@ -674,11 +685,13 @@
   font-size: 14px;
   font-weight: 700;
   line-height: 43px;
+  border-radius: 4px;
   background-color: #fff;
   color: #FF5A30;
   border: 1px solid #FF5A30;
   margin-top: 24px;
   padding: 0 32px;
+  cursor: pointer;
 }
 .projects .projects__cards .projects__item-1 .item__box .orange__button:hover,
 .projects .projects__cards .projects__item-2 .item__box .orange__button:hover,
@@ -689,8 +702,8 @@
 .projects .projects__cards .projects__item-7 .item__box .orange__button:hover,
 .projects .projects__cards .projects__item-8 .item__box .orange__button:hover,
 .projects .projects__cards .projects__item-9 .item__box .orange__button:hover {
-  color: #FFFFFF;
   background-color: #FF5A30;
+  color: #FFFFFF;
 }
 .projects .projects__cards .projects__item-1 .item__box .item__title,
 .projects .projects__cards .projects__item-2 .item__box .item__title,
