--- a/css/cottage.css
+++ b/css/cottage.css
@@ -421,6 +421,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 10px;
 }
 .arrow__box .arrow__left, .arrow__box .arrow__right {
   display: -webkit-box;
@@ -437,6 +438,14 @@
   border-radius: 50%;
   background-color: #fff;
   cursor: pointer;
+}
+.arrow__box .arrow__left:hover, .arrow__box .arrow__right:hover {
+  cursor: pointer;
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  background-color: green;
+  -webkit-transform: all 0.3s ease-in;
+          transform: all 0.3s ease-in;
 }
 .arrow__box .active {
   background-color: #FF5A30;
@@ -475,7 +484,7 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  gap: 30px;
+  gap: 29.9px;
   padding-bottom: 80px;
 }
 .projects .projects__cards .projects__item-1 {
@@ -647,6 +656,42 @@
   font-size: 16px;
   font-weight: 700;
   line-height: 48px;
+}
+
+.projects__slider {
+  overflow: hidden;
+}
+
+.projects__s1 {
+  margin-left: 0;
+}
+
+.projects__slides {
+  width: 300%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.projects__slides input[name=projects_r] {
+  display: none;
+}
+.projects__slides #projects_r1:checked ~ .projects__s1 {
+  margin-left: 0;
+}
+.projects__slides #projects_r2:checked ~ .projects__s1 {
+  margin-left: -33.3333333333%;
+}
+.projects__slides #projects_r3:checked ~ .projects__s1 {
+  margin-left: -66.6666666667%;
+}
+.projects__slides .projects__slide {
+  width: 33.3333333333%;
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+}
+.projects__slides .projects__slide img {
+  display: block;
 }
 
 body {
@@ -939,12 +984,39 @@ body {
 .projects {
   padding-top: 200px;
 }
-.projects__item-1 {
-  background-image: url(/img/cottage/1.png) !important;
+.projects .projects__cards .projects__item-1 {
+  background-image: url(/img/cottage/buildings/image4.png);
+  background-repeat: no-repeat;
 }
-.projects__item-2 {
-  background-image: url(/img/cottage/2.png) !important;
+.projects .projects__cards .projects__item-2 {
+  background-image: url(/img/cottage/buildings/image8.png);
+  background-repeat: no-repeat;
 }
-.projects__item-3 {
-  background-image: url(/img/cottage/3.png) !important;
+.projects .projects__cards .projects__item-3 {
+  background-image: url(/img/cottage/buildings/image7.png);
+  background-repeat: no-repeat;
+}
+.projects .projects__cards .projects__item-4 {
+  background-image: url(/img/cottage/buildings/image9.png);
+  background-repeat: no-repeat;
+}
+.projects .projects__cards .projects__item-5 {
+  background-image: url(/img/cottage/buildings/image6.png);
+  background-repeat: no-repeat;
+}
+.projects .projects__cards .projects__item-6 {
+  background-image: url(/img/cottage/buildings/image5.png);
+  background-repeat: no-repeat;
+}
+.projects .projects__cards .projects__item-7 {
+  background-image: url(/img/cottage/buildings/image.jpg);
+  background-repeat: no-repeat;
+}
+.projects .projects__cards .projects__item-8 {
+  background-image: url(/img/cottage/buildings/image3.png);
+  background-repeat: no-repeat;
+}
+.projects .projects__cards .projects__item-9 {
+  background-image: url(/img/cottage/buildings/image2.jpg);
+  background-repeat: no-repeat;
 }
