--- a/css/work.css
+++ b/css/work.css
@@ -510,6 +510,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 10px;
 }
 .arrow__box .arrow__left, .arrow__box .arrow__right {
   display: -webkit-box;
@@ -526,6 +527,14 @@
   border-radius: 50%;
   background-color: #fff;
   cursor: pointer;
+}
+.arrow__box .arrow__left:hover, .arrow__box .arrow__right:hover {
+  cursor: pointer;
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  background-color: green;
+  -webkit-transform: all 0.3s ease-in;
+          transform: all 0.3s ease-in;
 }
 .arrow__box .active {
   background-color: #FF5A30;
@@ -564,7 +573,7 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  gap: 30px;
+  gap: 29.9px;
   padding-bottom: 80px;
 }
 .projects .projects__cards .projects__item-1 {
