--- a/#source/scss/buttons.scss
+++ b/#source/scss/buttons.scss
@@ -20,10 +20,12 @@
 }
 .orange__button-40{
     @include fonts(700,16px,50px);
+    font-family: Ubuntu, sans-serif;
     padding: 0 40px;
 }
 .orange__button-112{
     @include fonts(700,16px,50px);
+    font-family: Ubuntu, sans-serif;
     padding: 0 112px;
 }
 
@@ -38,9 +40,11 @@
 }
 .white__button-32{
     @include fonts(700,14px,42px);
+    font-family: Ubuntu, sans-serif;
     padding: 0 32px;
 }
 .white__button-40{
     @include fonts(700,16px,50px);
+    font-family: Ubuntu, sans-serif;
     padding: 0 40px;
 }
