--- a/#source/scss/communication.scss
+++ b/#source/scss/communication.scss
@@ -31,15 +31,25 @@
                     gap: 8px;
                     label{
                         @include fonts(400,14px,21px);
+                        font-family: Ubuntu, sans-serif;
                     }
                     input{
                         @include fonts(400,14px,21px);
+                        font-family: Ubuntu, sans-serif;
                     }
-                    input[type=text],input[type=tel],input[type=email]{
+                    input[type=text],input[type=tel],input[type=email], textarea{
                         background-color: #F4F5F6;
                         border: 1px solid #D7DADD;
                         border-radius: 4px;
                         padding: 11px;
+                    }
+                    textarea{
+                        @include fonts(400,14px,21px);
+                        font-family: Ubuntu, sans-serif;
+                        min-width: 120px;
+                        max-width: 454px;
+                        min-height: 20px;
+                        max-height: 42px;
                     }
                 }
                 .check{
