--- a/#source/scss/interior__design.scss
+++ b/#source/scss/interior__design.scss
@@ -24,6 +24,7 @@ body{
 .orange__button{
     color: #FFFFFF;
     @include fonts(700,16px,50px);
+    font-family: Ubuntu, sans-serif;
     background-color: #FF5A30;
     border: none;
     padding: 0 112px;
@@ -39,6 +40,7 @@ body{
 .orange__button-small{
   color: #FF5A30;
   @include fonts(700,12px,34px);
+  font-family: Ubuntu, sans-serif;
   background-color: #FFFFFF;
   border: none;
   padding: 0 24px;
