--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -24,6 +24,7 @@ body{
 .orange__button{
     color: #FFFFFF;
     @include fonts(700,16px,48px);
+    font-family: Ubuntu, sans-serif;
     background-color: #FF5A30;
     border: none;
     padding: 0 40px;
@@ -117,6 +118,7 @@ body{
             .transparent__button{
                 color: #FFFFFF;
                 @include fonts(700,16px,52px);
+                font-family: Ubuntu, sans-serif;
                 background-color: transparent;
                 border: 1px solid #FFFFFF;
                 padding: 0 40px;
@@ -231,9 +233,11 @@ body{
             label, input[type=text],input[type=tel]{
                 display: block;
                 @include fonts(400,14px,21px);
+                font-family: Ubuntu, sans-serif;
             }
             .orange__button{
                 @include fonts(700,14px,41px);
+                font-family: Ubuntu, sans-serif;
                 padding: 0 32px;
             }
             input[type=text],input[type=tel]{
@@ -341,11 +345,23 @@ body{
     border-radius: 4px;
     box-shadow: 0 0 53px -30px;
     height: fit-content;
-}
+    a{
+        text-decoration: none;
+        color: #1E212C;
+        &:hover{
+            cursor: pointer;
+            color: #FF5A30;
+        }
+    }
+    img{
+        display: block;
+    }
+  }
+
 }
 .item {
   &__box{
-    padding: 18px 24px 24px 24px;
+    padding: 24px;
   }
   &__title{
     margin: 0;
@@ -383,11 +399,25 @@ body{
         width: 495px;
         border-radius: 4px;
         box-shadow: 0 0 53px -30px;
+        a{
+            text-decoration: none;
+            color: #1E212C;
+            &:hover{
+                cursor: pointer;
+                color: #FF5A30;
+            }
+        }
+        img{
+            display: block;
+        }
+        .item__title{
+            padding-bottom: 8px;
+        }
     }
     .item__box{
-        padding-top: 5px;
+        padding-top: 16px;
     }
-}
+  }
   &__view{
     display: flex;
     padding-top: 80px;
