--- a/css/about.css
+++ b/css/about.css
@@ -151,6 +151,7 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
+  font-family: Ubuntu, sans-serif;
   background-color: rgba(255, 255, 255, 0.12);
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 4px 0 0 4px;
@@ -162,6 +163,7 @@
   font-size: 14px;
   font-weight: 700;
   line-height: 44px;
+  font-family: Ubuntu, sans-serif;
   background-color: #FF5A30;
   border-radius: 0px 4px 4px 0px;
   border: none;
@@ -307,17 +309,29 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
+  font-family: Ubuntu, sans-serif;
 }
 .communication__back .wrapper .communication form .form__item input {
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
+  font-family: Ubuntu, sans-serif;
 }
-.communication__back .wrapper .communication form .form__item input[type=text], .communication__back .wrapper .communication form .form__item input[type=tel], .communication__back .wrapper .communication form .form__item input[type=email] {
+.communication__back .wrapper .communication form .form__item input[type=text], .communication__back .wrapper .communication form .form__item input[type=tel], .communication__back .wrapper .communication form .form__item input[type=email], .communication__back .wrapper .communication form .form__item textarea {
   background-color: #F4F5F6;
   border: 1px solid #D7DADD;
   border-radius: 4px;
   padding: 11px;
+}
+.communication__back .wrapper .communication form .form__item textarea {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  font-family: Ubuntu, sans-serif;
+  min-width: 120px;
+  max-width: 454px;
+  min-height: 20px;
+  max-height: 42px;
 }
 .communication__back .wrapper .communication form .check {
   display: block;
@@ -766,6 +780,7 @@ body {
   font-size: 16px;
   font-weight: 700;
   line-height: 50px;
+  font-family: Ubuntu, sans-serif;
   background-color: #FF5A30;
   border: none;
   padding: 0 112px;
@@ -785,6 +800,7 @@ body {
   font-size: 12px;
   font-weight: 700;
   line-height: 34px;
+  font-family: Ubuntu, sans-serif;
   background-color: #FFFFFF;
   border: none;
   padding: 0 24px;
@@ -1110,10 +1126,9 @@ body {
 .worldwide__section {
   background-color: rgb(244, 245, 246);
 }
-
-.our__box {
+.worldwide__section .our__box {
   padding: 80px 0 120px 0;
 }
-.our__title {
+.worldwide__section .our__title {
   padding-bottom: 60px;
 }
