--- a/css/news.css
+++ b/css/news.css
@@ -151,6 +151,7 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
+  font-family: Ubuntu, sans-serif;
   background-color: rgba(255, 255, 255, 0.12);
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 4px 0 0 4px;
@@ -162,6 +163,7 @@
   font-size: 14px;
   font-weight: 700;
   line-height: 44px;
+  font-family: Ubuntu, sans-serif;
   background-color: #FF5A30;
   border-radius: 0px 4px 4px 0px;
   border: none;
@@ -307,17 +309,29 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
+  font-family: Ubuntu, sans-serif;
 }
 .communication__back .wrapper .communication form .form__item input {
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
+  font-family: Ubuntu, sans-serif;
 }
-.communication__back .wrapper .communication form .form__item input[type=text], .communication__back .wrapper .communication form .form__item input[type=tel], .communication__back .wrapper .communication form .form__item input[type=email] {
+.communication__back .wrapper .communication form .form__item input[type=text], .communication__back .wrapper .communication form .form__item input[type=tel], .communication__back .wrapper .communication form .form__item input[type=email], .communication__back .wrapper .communication form .form__item textarea {
   background-color: #F4F5F6;
   border: 1px solid #D7DADD;
   border-radius: 4px;
   padding: 11px;
+}
+.communication__back .wrapper .communication form .form__item textarea {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  font-family: Ubuntu, sans-serif;
+  min-width: 120px;
+  max-width: 454px;
+  min-height: 20px;
+  max-height: 42px;
 }
 .communication__back .wrapper .communication form .check {
   display: block;
@@ -448,6 +462,7 @@
   font-size: 16px;
   font-weight: 700;
   line-height: 50px;
+  font-family: Ubuntu, sans-serif;
   padding: 0 40px;
 }
 
@@ -455,6 +470,7 @@
   font-size: 16px;
   font-weight: 700;
   line-height: 50px;
+  font-family: Ubuntu, sans-serif;
   padding: 0 112px;
 }
 
@@ -473,6 +489,7 @@
   font-size: 14px;
   font-weight: 700;
   line-height: 42px;
+  font-family: Ubuntu, sans-serif;
   padding: 0 32px;
 }
 
@@ -480,6 +497,7 @@
   font-size: 16px;
   font-weight: 700;
   line-height: 50px;
+  font-family: Ubuntu, sans-serif;
   padding: 0 40px;
 }
 
