--- a/#source/scss/about.scss
+++ b/#source/scss/about.scss
@@ -158,9 +158,6 @@ body{
   &__dates{
     margin: 0;
     padding-inline-start: 40px;
-    .active{
-      color: #FF5A30;
-    }
     li{
       @include fonts(700,28px,42px);
       color: #9A9CA5;
@@ -311,5 +308,63 @@ body{
         padding-bottom: 60px;
       }
     }
+  }
+}
+
+.slider{
+  overflow: hidden;
+}
+.s1{
+  margin-left: 0;
+}
+.slides{
+  position: relative;
+  width: 900%;
+  height: 100%;
+  display: flex;
+  input[name="r"]{
+    display: none;
+  }
+
+  #r1:checked ~ .s1{
+    margin-left: 0;
+  }
+  #r2:checked ~ .s1{
+    margin-left: (-(100% / 9));
+  }
+  #r3:checked ~ .s1{
+    margin-left: (-2 * (100% / 9));
+  }
+  #r4:checked ~ .s1{
+    margin-left: (-3 * (100% / 9));
+  }
+  #r5:checked ~ .s1{
+    margin-left: (-4 * (100% / 9));
+  }
+  #r6:checked ~ .s1{
+    margin-left: (-5 * (100% / 9));
+  }
+  #r7:checked ~ .s1{
+    margin-left: (-6 * (100% / 9));
+  }
+  #r8:checked ~ .s1{
+    margin-left: (-7 * (100% / 9));
+  }
+  #r9:checked ~ .s1{
+    margin-left: (-8 * (100% / 9));
+  }
+
+  .slide{
+    width: (100% / 9);
+    transition: all 0.6s ease;
+    img{
+      display: block;
+    }
+  }
+}
+.bar{
+  &:hover{
+    cursor: pointer;
+    color: #FF5A30;
   }
 }
