--- a/css/about.css
+++ b/css/about.css
@@ -954,9 +954,6 @@ body {
   -webkit-padding-start: 40px;
           padding-inline-start: 40px;
 }
-.history__dates .active {
-  color: #FF5A30;
-}
 .history__dates li {
   font-size: 28px;
   font-weight: 700;
@@ -1131,4 +1128,64 @@ body {
 }
 .worldwide__section .our__title {
   padding-bottom: 60px;
+}
+
+.slider {
+  overflow: hidden;
+}
+
+.s1 {
+  margin-left: 0;
+}
+
+.slides {
+  position: relative;
+  width: 900%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.slides input[name=r] {
+  display: none;
+}
+.slides #r1:checked ~ .s1 {
+  margin-left: 0;
+}
+.slides #r2:checked ~ .s1 {
+  margin-left: -11.1111111111%;
+}
+.slides #r3:checked ~ .s1 {
+  margin-left: -22.2222222222%;
+}
+.slides #r4:checked ~ .s1 {
+  margin-left: -33.3333333333%;
+}
+.slides #r5:checked ~ .s1 {
+  margin-left: -44.4444444444%;
+}
+.slides #r6:checked ~ .s1 {
+  margin-left: -55.5555555556%;
+}
+.slides #r7:checked ~ .s1 {
+  margin-left: -66.6666666667%;
+}
+.slides #r8:checked ~ .s1 {
+  margin-left: -77.7777777778%;
+}
+.slides #r9:checked ~ .s1 {
+  margin-left: -88.8888888889%;
+}
+.slides .slide {
+  width: 11.1111111111%;
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+}
+.slides .slide img {
+  display: block;
+}
+
+.bar:hover {
+  cursor: pointer;
+  color: #FF5A30;
 }
