--- a/css/about.css
+++ b/css/about.css
@@ -816,14 +816,14 @@ body {
 }
 
 .description__section {
-  background-image: url(../img/about/Group\ 273.png);
+  background-image: url(/img/about/Group\ 273.png);
   background-position: 100% 50%;
   background-size: contain;
   background-repeat: no-repeat;
 }
 
 .information__section {
-  background-image: url(../img/about/bg-image.png);
+  background-image: url(/img/about/bg-image.png);
   background-position: 100% -880%;
   background-repeat: no-repeat;
 }
