scss urls fixes

--- a/#source/scss/communication.scss
+++ b/#source/scss/communication.scss
@@ -1,5 +1,5 @@
 .communication__back{
-    background: url(../../img/main/communication.jpg);
+    background: url(/img/main/communication.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     .wrapper{
