--- a/#source/scss/about.scss
+++ b/#source/scss/about.scss
@@ -112,7 +112,7 @@ body{
     box-shadow: 0 10px 15px #1E212C08;
 }
   &__list{
-    list-style-image: url(img/about/braces.svg);
+    list-style-image: url(/img/about/braces.svg);
     margin: 0;
     padding-bottom: 60px;
     @include fonts(700,20px,30px);
@@ -261,28 +261,28 @@ body{
 }
 
 .item__box-1{
-  background-image: url(img/about/team/image.jpg);
+  background-image: url(/img/about/team/image.jpg);
 }
 .item__box-2{
-  background-image: url(img/about/team/image.png);
+  background-image: url(/img/about/team/image.png);
 }
 .item__box-3{
-  background-image: url(img/about/team/image\(1\).png);
+  background-image: url(/img/about/team/image\(1\).png);
 }
 .item__box-4{
-  background-image: url(img/about/team/image\(2\).png);
+  background-image: url(/img/about/team/image\(2\).png);
 }
 .item__box-5{
-  background-image: url(img/about/team/image\(3\).png);
+  background-image: url(/img/about/team/image\(3\).png);
 }
 .item__box-6{
-  background-image: url(img/about/team/image\(4\).png);
+  background-image: url(/img/about/team/image\(4\).png);
 }
 .item__box-7{
-  background-image: url(img/about/team/image\(5\).png);
+  background-image: url(/img/about/team/image\(5\).png);
 }
 .item__box-8{
-  background-image: url(img/about/team/image\(6\).png);
+  background-image: url(/img/about/team/image\(6\).png);
 }
 .item__socials{
   display: none;
