--- a/css/style.css
+++ b/css/style.css
@@ -248,7 +248,7 @@
 }
 
 .communication__back {
-  background: url(../../img/main/communication.jpg);
+  background: url(/img/main/communication.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -615,15 +615,15 @@
   padding-bottom: 80px;
 }
 .projects .projects__cards .projects__item-1 {
-  background-image: url(../../img/main/image.jpg);
+  background-image: url(/img/main/image.jpg);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-2 {
-  background-image: url(../../img/main/image2.jpg);
+  background-image: url(/img/main/image2.jpg);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-3 {
-  background-image: url(../../img/main/image3.png);
+  background-image: url(/img/main/image3.png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-1,
@@ -904,7 +904,7 @@ body {
 }
 
 .back {
-  background-image: url(../../img/main/bg-image.jpg);
+  background-image: url(/img/main/bg-image.jpg);
   background-size: cover;
   color: #FFFFFF;
 }
@@ -1014,7 +1014,7 @@ body {
   width: 100%;
   position: relative;
   height: 500px;
-  background-image: url(../../img/main/image.png);
+  background-image: url(/img/main/image.png);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1122,7 +1122,7 @@ body {
 }
 
 .services__back {
-  background-image: url(../../img/main/background.jpg);
+  background-image: url(/img/main/background.jpg);
 }
 .services__back .services {
   padding-top: 212px;
@@ -1160,7 +1160,7 @@ body {
   margin: 0;
 }
 .services__back .services .services__cards .active {
-  background: url(../../img/main/card.jpg);
+  background: url(/img/main/card.jpg);
   color: #FFFFFF;
 }
 
@@ -1196,7 +1196,7 @@ body {
   top: -12%;
   left: -5%;
   z-index: -1;
-  background-image: url(../../img/main/facts_bg-image.png);
+  background-image: url(/img/main/facts_bg-image.png);
   background-repeat: no-repeat;
   -webkit-transform: rotate(3deg);
           transform: rotate(3deg);
