--- a/css/about.css
+++ b/css/about.css
@@ -816,14 +816,14 @@ body {
 }
 
 .description__section {
-  background-image: url(../img/about/Group\ 273.png);
+  background-image: url(/img/about/Group\ 273.png);
   background-position: 100% 50%;
   background-size: contain;
   background-repeat: no-repeat;
 }
 
 .information__section {
-  background-image: url(../img/about/bg-image.png);
+  background-image: url(/img/about/bg-image.png);
   background-position: 100% -880%;
   background-repeat: no-repeat;
 }
@@ -891,7 +891,7 @@ body {
           box-shadow: 0 10px 15px rgba(30, 33, 44, 0.031372549);
 }
 .quotation__list {
-  list-style-image: url(../img/about/braces.svg);
+  list-style-image: url(/img/about/braces.svg);
   margin: 0;
   padding-bottom: 60px;
   font-size: 20px;
